--- a/warm-up.html
+++ b/warm-up.html
@@ -10,13 +10,20 @@
 
 <!-- 1. Create a div with the class "flex-container" -->
 <!-- Your code starts here -->
-
+    <div class="flex-container">
+        <div class="box1">Movies</div>
+            <ul>
+                <li><a href="https://letterboxd.com/film/dead-poets-society/">Dead Poets Society</a></li>
+                <li><a href="https://letterboxd.com/film/la-la-land/">La La Land</a></li>
+            </ul>
+        <div class="box2">Music</div>
+        <div class="box3">Hockey</div>
+    </div>
   
     <!-- 2. Inside the container, create three divs with classes "box1", "box2", "box3" -->
     <!-- Each box should contain some text, e.g., "Box 1" -->
     <!-- Your code starts here -->
 
-  
     <!-- Your code ends here -->
 
 <!-- Your code ends here -->
